--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.284.0",
-    "next": "13.5.4",
+    "next": "^14.2.3",
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.4.2",
     "nprogress": "^0.2.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.47.0",
     "sharp": "^0.32.6",
     "tailwind-merge": "^1.14.0",
@@ -39,7 +39,7 @@
     "@types/uuid": "^9.0.5",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8",
     "sass": "^1.69.1",
     "tailwindcss": "^3",
